# navigation_experiments_mc_bts_pddl

./: README.md  resources.repos
launch/tiago/: nav2_tiago_launch.py  tiago_mros_launch.py
launch/turtlebot3_sim/: nav2_turtlebot3_launch.py  tb3_sim_launch.py
maps/sim/tb3_world/: map.pgm  map.yaml
maps/urjc/scenario_mini/: map.pgm
navigation_experiments_bts/: CMakeLists.txt  package.xml
navigation_experiments_bts/behavior_trees/: bt.xml
navigation_experiments_bts/include/navigation_experiments_bts/: BTActionNode.hpp
navigation_experiments_bts/include/navigation_experiments_bts/behavior_tree_nodes/: NavigateToWp.hpp  Recharge.hpp
navigation_experiments_bts/launch/: bt_controller_launch.py
navigation_experiments_bts/src/: bt_controller.cpp
navigation_experiments_bts/src/behavior_tree_nodes/: NavigateToWp.cpp  Recharge.cpp
navigation_experiments_bts/test/: check_order_test.cpp  deliver_order_test.cpp  get_order_test.cpp  interact_with_barman_test.cpp  navigate_to_barman_test.cpp  navigate_to_client_test.cpp  pilot_integration_test.cpp
navigation_experiments_mc_bts/: CMakeLists.txt  package.xml
navigation_experiments_mc_bts/behavior_trees/: bt_battery_laser.xml  bt_batterycheck.xml  bt_mc.xml  bt_no_mc_battery.xml  bt_no_mc_battery_laser.xml
navigation_experiments_mc_bts/include/navigation_experiments_mc_bts/: BTActionNode.hpp
navigation_experiments_mc_bts/include/navigation_experiments_mc_bts/behavior_tree_nodes/: CheckComponent.hpp  NavigateToWp.hpp  Recharge.hpp  Reconfigure.hpp
navigation_experiments_mc_bts/launch/: bt_controller_launch.py
navigation_experiments_mc_bts/src/: bt_controller.cpp
navigation_experiments_mc_bts/src/behavior_tree_nodes/: CheckComponent.cpp  NavigateToWp.cpp  Recharge.cpp  Reconfigure.cpp
navigation_experiments_mc_bts/test/: CMakeLists.txt  check_order_test.cpp  deliver_order_test.cpp  get_order_test.cpp  interact_with_barman_test.cpp  navigate_to_barman_test.cpp  navigate_to_client_test.cpp  pilot_integration_test.cpp
navigation_experiments_mc_bts_pddl_base/: CMakeLists.txt  package.xml
navigation_experiments_mc_bts_pddl_base/launch/: nav2_bringup_launch.py
navigation_experiments_mc_bts_pddl_base/launch/tiago/: nav2_tiago_launch.py  tiago_mros_launch.py
navigation_experiments_mc_bts_pddl_base/launch/turtlebot3_sim/: nav2_turtlebot3_launch.py  tb3_sim_launch.py
navigation_experiments_mc_bts_pddl_base/maps/sim/tb3_house/: map.yaml
navigation_experiments_mc_bts_pddl_base/params/: nav2_tb3_params.yaml  pilot_modes.yaml
navigation_experiments_mc_bts_pddl_base/rviz/: nav2_default_view.rviz
navigation_experiments_mc_bts_pddl_base/worlds/models/nav2_house/: model.config  model.sdf
navigation_experiments_mc_bts_pddl_log/: package.xml  setup.cfg  setup.py
navigation_experiments_mc_bts_pddl_log/navigation_experiments_mc_bts_pddl_log/: reconfig_time.py  topics_2_csv.py
navigation_experiments_mc_bts_ppdl/: CMakeLists.txt  package.xml
navigation_experiments_mc_bts_ppdl/launch/: nav2_bringup_launch.py  nav2_navigation_launch.py
navigation_experiments_mc_bts_ppdl/params/: nav2_tiago_params.yaml
navigation_experiments_mc_bts_ppdl/rviz/: nav2_default_view.rviz
navigation_experiments_mc_pddl/: CMakeLists.txt  package.xml
navigation_experiments_mc_pddl/launch/: pddl_controller_launch.py  pddl_reconfig_controller_launch.py
navigation_experiments_mc_pddl/pddl/: patrol_w_recharge.pddl  patrol_w_recharge_reconfig.pddl
navigation_experiments_mc_pddl/src/: ask_charge_action_node.cpp  charge_action_node.cpp  degraded_move_action_node.cpp  move_action_node.cpp  patrol_action_node.cpp  patrolling_controller_node.cpp  patrolling_reconfig_controller_node.cpp  reconfigure_action_node.cpp  recover_nav_sensor_node.cpp
params/: pilot_modes.yaml
worlds/: waffle_house.model
