<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_experiments_mc_bts</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="lorena.bajo@urjc.es">Lorena Bajo Rebollo</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_knowledge_graph</depend>
  <depend>ament_index_cpp</depend>
  <depend>nav2_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>mros2_msgs</depend>
  <depend>std_srvs</depend>
  <depend>system_modes</depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
